Update java-module-system.md